@@ -194,6 +194,12 @@ struct vki_sigcontext {
 };
 
 //----------------------------------------------------------------------
+// From linux-5.0.0/arch/arm64/include/uapi/asm/siginfo.h
+//----------------------------------------------------------------------
+
+#define __VKI_ARCH_SI_PREAMBLE_SIZE (4 * sizeof(int))
+
+//----------------------------------------------------------------------
 // From linux-3.10.5/uapi/include/asm-generic/mman-common.h
 //----------------------------------------------------------------------
 
